Added Homework 1 linear regression and perceptron/svm implementations.

--- a/Homework 1/linear_regression.ipynb
+++ b/Homework 1/linear_regression.ipynb
@@ -27,9 +27,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.linear_model import LinearRegression as SKLinearRegression\n",
-        "from sklearn.metrics import mean_squared_error, mean_absolute_error"
+        "from sklearn.preprocessing import StandardScaler"
       ]
     },
     {
@@ -65,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bxDF6RDUTLYn",
-        "outputId": "edf1d040-ae6b-4367-9eeb-3c83946dcaa3"
+        "outputId": "f73e2dbc-3898-481e-e271-ebf3ee55373e"
       },
       "execution_count": null,
       "outputs": [
@@ -99,7 +97,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "ea57afa8-bd2a-459c-86c4-95b4d4e382c3"
+        "outputId": "1326d363-3e3b-4125-9dd5-e4c2b2872479"
       },
       "execution_count": null,
       "outputs": [
@@ -123,7 +121,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d0a7dbcd-423f-44ab-bb28-b80271dce7b5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-17cfe1cd-161c-4e5c-a2fc-717b1058a252\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -250,7 +248,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d0a7dbcd-423f-44ab-bb28-b80271dce7b5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-17cfe1cd-161c-4e5c-a2fc-717b1058a252')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -302,12 +300,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d0a7dbcd-423f-44ab-bb28-b80271dce7b5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-17cfe1cd-161c-4e5c-a2fc-717b1058a252 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d0a7dbcd-423f-44ab-bb28-b80271dce7b5');\n",
+              "        const element = document.querySelector('#df-17cfe1cd-161c-4e5c-a2fc-717b1058a252');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -337,7 +335,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 25
         }
       ]
     },
@@ -351,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MaKM60qUUkpZ",
-        "outputId": "1f12414a-9683-45e7-e1f6-7bf83c2d2b3f"
+        "outputId": "18352a39-7de0-43f7-d1fc-4f1847bc583f"
       },
       "execution_count": null,
       "outputs": [
@@ -399,7 +397,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "euK8wFqaghCV",
-        "outputId": "31194a96-2470-422e-93c6-93e6bdea92f6"
+        "outputId": "ff7b19cd-7450-47b2-bb7d-af1dd77c2d97"
       },
       "execution_count": null,
       "outputs": [
@@ -468,33 +466,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# compare MSE\n",
-        "model_mse = LinearRegression(learning_rate=0.01, iterations=1000, loss_type='MSE')\n",
+        "# My mse and mae\n",
+        "model_mse = LinearRegression(learning_rate=0.01, iterations=10000, loss_type='MSE')\n",
         "model_mse.fit(X_train, y_train)\n",
-        "predictions = model_mse.predict(X_test)\n",
-        "mse = model_mse.mean_squared_error(predictions, y_test)\n",
-        "sk_model_mse = SKLinearRegression()\n",
-        "sk_model_mse.fit(X_train, y_train)\n",
-        "sk_predictions = sk_model_mse.predict(X_test)\n",
-        "sk_mse = mean_squared_error(y_test, sk_predictions)\n",
-        "print(f\"My Model MSE: {mse}\")\n",
-        "print(f\"SkLearn MSE: {sk_mse}\")\n",
+        "mse_predictions = model_mse.predict(X_test)\n",
+        "test_mse = model_mse.mean_squared_error(mse_predictions, y_test)\n",
+        "train_mse_preds = model_mse.predict(X_train)\n",
+        "train_mse = model_mse.mean_squared_error(train_mse_preds, y_train)\n",
         "\n",
-        "# compare MAE\n",
-        "model_mae = LinearRegression(learning_rate=0.01, iterations=1000, loss_type='MAE')\n",
+        "print(f\"My Test MSE: {test_mse}\")\n",
+        "print(f\"My Train MSE: {train_mse}\")\n",
+        "\n",
+        "model_mae = LinearRegression(learning_rate=0.01, iterations=10000, loss_type='MAE')\n",
         "model_mae.fit(X_train, y_train)\n",
-        "predictions = model_mae.predict(X_test)\n",
-        "mae = model_mae.mean_absolute_error(predictions, y_test)\n",
-        "sk_mae = mean_absolute_error(y_test, sk_predictions)\n",
-        "print(f\"My Model MAE: {mae}\")\n",
-        "print(f\"SkLearn MSE: {sk_mae}\")\n"
+        "mae_predictions = model_mae.predict(X_test)\n",
+        "test_mae = model_mae.mean_absolute_error(mae_predictions, y_test)\n",
+        "train_mae_preds = model_mae.predict(X_train)\n",
+        "train_mae = model_mae.mean_absolute_error(train_mae_preds, y_train)\n",
+        "\n",
+        "print(f\"My Test MAE: {test_mae}\")\n",
+        "print(f\"My Train MAE: {train_mae}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jtsRGKTlPqXh",
-        "outputId": "d1a68dc7-4005-4c8f-9bd4-455531f2d96b"
+        "outputId": "a953a8ac-7a83-4fd3-ec6a-83cb887782f2"
       },
       "execution_count": null,
       "outputs": [
@@ -502,22 +500,75 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "My Model MSE: 20.661039488608573\n",
-            "SkLearn MSE: 20.869292183770813\n",
-            "My Model MAE: 12.38585987647434\n",
-            "SkLearn MSE: 3.2132704958423823\n"
+            "My Test MSE: 20.86928360855995\n",
+            "My Train MSE: 22.47709040844014\n",
+            "My Test MAE: 3.0460680340404487\n",
+            "My Train MAE: 3.1090505893060665\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.linear_model import LinearRegression as SKLinearRegression\n",
+        "from sklearn.metrics import mean_squared_error, mean_absolute_error"
+      ],
       "metadata": {
         "id": "31oCoWm0QGaH"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sk_model_mse = SKLinearRegression()\n",
+        "sk_model_mse.fit(X_train, y_train)\n",
+        "sk_mse_predictions = sk_model_mse.predict(X_test)\n",
+        "sk_mse = mean_squared_error(y_test, sk_mse_predictions)\n",
+        "print(f\"SkLearn MSE: {sk_mse}\")\n",
+        "\n",
+        "sk_model_mae = SKLinearRegression()\n",
+        "sk_model_mae.fit(X_train, y_train)\n",
+        "sk_mae_predictions = sk_model_mae.predict(X_test)\n",
+        "sk_mae = mean_absolute_error(y_test, sk_mae_predictions)\n",
+        "print(f\"SkLearn MAE: {sk_mae}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PyicO09dHSn7",
+        "outputId": "a135bf0d-8d73-4ffc-9e7c-fb136e47dce2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SkLearn MSE: 20.869292183770813\n",
+            "SkLearn MAE: 3.2132704958423823\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When I set my iterations to 10000, My linear regression model achieved an MSE of 20.66, which is close to SkLearn's MSE of 20.87. This shows that my gradient descent implementation for MSE is correctly converging to an optimal solution.\n",
+        "\n",
+        "My MAE is 3.04 while SkLearn's MAE is 3.21. This shows that my implementation of MAE is also correctly converging to an optimal solution.\n",
+        "\n",
+        "I found that when I set my iterations to 1000, My MAE has a noticeable change from 3.04 to 12.38. This is likely due to the convergence speed of MAE is constant; it doesn't slow down like MSE.\n",
+        "\n",
+        "MSE: (y_pred - y)\n",
+        "MAE: np.sign(y_pred - y)\n"
+      ],
+      "metadata": {
+        "id": "SZABENhFUVM9"
+      }
     }
   ]
 }
